--- a/numba/asdl/README
+++ b/numba/asdl/README
@@ -3,9 +3,13 @@
 Files Organization
 ------------------
 
-Files are organized in a specific manner to differentiate between version specific files and common files.  The mechanism is transparent to the user of the asdl module (in this directory).
+Files are organized in a specific manner to differentiate between version
+specific files and common files.  The mechanism is transparent to the
+user of the asdl module (in this directory).
 
-Version specific files are placed under "py$major_$minor", where $major and $minor represents the major and minor version tuple of Python; for example, "py2_7" is for Python2.7.
+Version specific files are placed under "py$major_$minor", where
+$major and $minor represents the major and minor version tuple of Python;
+for example, "py2_7" is for Python2.7.
 
 Common files are placed inside the "common" directory
 
@@ -26,6 +30,4 @@ Usage
 Testing
 -------
 
-Run tests in the current directory:
-
-$ python -m unittest discover -vft tests
+~/numba $ python runtests.py adsl
